<resources>
    <string name="app_name">My Bullet Journal</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_sign_out">Sign Out</string>

    <string name="all_tasks_header">All Tasks</string>

    <string name="first_label_option">Choose a task label</string>

    <!--Add New Tasks-->
    <string name="add_task_button">Add Task</string>
    <string name="task">Task:</string>
    <string name="task_label">Label:</string>
    <string name="task_type">Task Type:</string>
    <string name="task_date">Date:</string>
    <string name="task_time">Time:</string>
    <string name="taskname_hint">Enter task name here</string>
    <string name="tasklabel_hint">Enter task name here</string>
    <string name="tasktype_hint">Enter task name here</string>
    <string name="taskdate_hint">Select a date (optional)</string>
    <string name="tasktime_hint">Select a time (optional)</string>

    <!--Login-->
    <string name="login_email">Email:</string>
    <string name="login_password">Password:</string>
    <string name="login_email_hint">Enter Email</string>
    <string name="login_password_hint">Enter Password</string>
    <string name="login_button">Login</string>
    <string name="login_create_user">Create a New User</string>

    <string-array name="task_labels">
        <item>Choose a task label</item>
    </string-array>

    <string-array name="task_type_labels">
        <item>Choose a task type</item>
        <item>EVENT</item>
        <item>TASK</item>
        <item>DEADLINE</item>
        <item>URGENT</item>
        <item>NOTE</item>
    </string-array>

    <string-array name="task_update_labels">
        <item>TASK</item>
        <item>TASK COMPLETED</item>
        <item>TASK CANCELLED</item>
        <item>TASK SCHEDULED</item>
        <item>TASK RESCHEDULED</item>
    </string-array>

    <string name="event_task_type">EVENT</string>
    <string name="deadline_task_type">DEADLINE</string>
    <string name="urgent_task_type">URGENT</string>
    <string name="note_task_type">NOTE</string>

    <string name="type_task">TASK</string>
    <string name="completed_type_task">TASK COMPLETED</string>
    <string name="cancelled_type_task">TASK CANCELLED</string>
    <string name="scheduled_type_task">TASK SCHEDULED</string>
    <string name="rescheduled_type_task">TASK RESCHEDULED</string>

    <!--Monthly Log-->
    <string name="view_tasks">View Tasks</string>

    <!--Future Log-->
    <string name="future_log_heading">Future at a glance</string>

    <!--Task Details-->
    <string name="task_details_update_button_text">Update</string>
    <string name="task_details_delete_button_text">Delete</string>
    <string name="current_status">Current Status:</string>

    <!--Widget-->
    <string name="widget_heading">What\'s going on today?</string>

    <!--No Connectivity Error Message-->
    <string name="no_connectivity_error">No connectivity available. Please connect to WiFi or a Mobile Network before trying again. Thank you</string>

    <!--No Tasks to display Error Message-->
    <string name="no_tasks_message">You currently don\'t have any tasks to display. Add some and get organized!</string>

    <!--Content Descriptions-->
    <string name="add_new_task_fab">Add New Task Button</string>
    <string name="date_container_button_cd">Next Date</string>
    <string name="date_previous_container_button_cd">Previous Date</string>
    <string name="task_label_content_description">Change Task Label</string>
    <string name="task_details_status_icon_cd">Task Status Icon</string>
    <string name="app_logo_cd">Application Logo</string>
    <string name="menu_view_labels">View Labels</string>
    <string name="menu_future_log">Future Log</string>
    <string name="menu_monthly_log">Monthly Log</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_sign_out">Sign Out</string>
    <string name="nav_menu_icon_cd">Navigation Drawer Header Icon</string>
    <string name="edit_task_cd">Edit</string>

    <!--Titles-->
    <string name="title_activity_add_task">Add New Task</string>
    <string name="title_activity_view_labels">View Labels</string>
    <string name="title_activity_future_log">Future Log</string>
    <string name="title_activity_monthly_log">Monthly Log</string>
    <string name="empty_string">No Tasks for Today</string>

    <!--Snackbar Error Messages-->
    <string name="snackbar_login_missing_fields_message">Some required information is missing.</string>
    <string name="snackbar_login_failed_message">Our apologies, log in failed. Please try again later.</string>
    <string name="snackbar_login_create_new_user_failed">Our apologies, creating a new user failed. Please try again later.</string>
    <string name="snackbar_no_connectivity_message">It appears you are not connected to a network.</string>
    <string name="snackbar_task_details_update_failed">Oh no! Looks like something went wrong with updating the selected task. Please try again later!</string>
    <string name="snackbar_task_details_deletion_failed">Oh no! Looks like something went wrong with deleting the selected task. Please try again later!</string>
    <string name="snackbar_task_details_edit_failure">Oh no! Looks like something went wrong with attempting to edit this. Please try again later.</string>
    <string name="snackbar_error_loading_task">Error loading task. Please try again later.</string>

    <string name="snackbar_task_name_required">Task Name is Required.</string>
    <string name="snackbar_task_label_required">Task Label is Required.</string>
    <string name="snackbar_task_type_required">Task Type is Required.</string>
    <string name="snackbar_task_added">Task Successfully Added!</string>

</resources>
