<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/monthly_log"
            android:icon="@drawable/ic_month"
            android:title="@string/menu_monthly_log" />
        <item
            android:id="@+id/future_log"
            android:icon="@drawable/ic_future_log"
            android:title="@string/menu_future_log" />
        <item
            android:id="@+id/view_labels"
            android:icon="@drawable/ic_manage_label"
            android:title="@string/menu_view_labels" />
    </group>

    <item android:title="@string/menu_sign_out">
        <menu>
            <item
                android:id="@+id/nav_sign_out"
                android:icon="@drawable/ic_settings"
                android:title="@string/menu_sign_out" />
        </menu>
    </item>

</menu>
