<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/taskname_label_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/label_textsize"
        android:text="@string/task"
        android:textColor="@android:color/black"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp" />

    <EditText
        android:id="@+id/taskname_edittext_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/taskname_hint"
        android:textColorHint="@color/colorAccent"
        app:layout_constraintLeft_toRightOf="@+id/taskname_label_textview"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/task_label_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_label"
        android:textSize="@dimen/label_textsize"
        android:textColor="@android:color/black"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/taskname_label_textview"
        android:layout_marginTop="27dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp" />

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/tasklabel_edittext_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/taskname_hint"
        android:textColorHint="@color/colorAccent"
        android:textAlignment="center"
        android:textSize="@dimen/body_textsize"
        android:entries="@array/task_labels"
        app:layout_constraintLeft_toRightOf="@+id/task_label_textview"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintTop_toBottomOf="@+id/taskname_edittext_view"
        android:layout_marginTop="18dp" />

    <TextView
        android:id="@+id/task_type_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_type"
        android:textSize="@dimen/label_textsize"
        android:textColor="@android:color/black"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/task_label_textview"
        android:layout_marginTop="27dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp" />

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/tasktype_edittext_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/taskname_hint"
        android:textColorHint="@color/colorAccent"
        android:textAlignment="center"
        app:layout_constraintLeft_toRightOf="@+id/task_type_textview"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintTop_toBottomOf="@+id/tasklabel_edittext_view"
        android:layout_marginTop="29dp"/>

    <TextView
        android:id="@+id/task_date_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_date"
        android:textSize="@dimen/label_textsize"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@+id/task_type_textview"
        android:layout_marginTop="27dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp" />

    <EditText
        android:id="@+id/taskdate_edittext_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/taskname_hint"
        android:textColorHint="@color/colorAccent"
        android:textAlignment="center"
        app:layout_constraintLeft_toRightOf="@+id/task_date_textview"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toBottomOf="@+id/tasktype_edittext_view"
        android:layout_marginTop="19dp" />

</android.support.constraint.ConstraintLayout>