<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/tasks_details_app_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/task_details_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:id="@+id/details_task_name_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:padding="@dimen/default_padding"
        tools:text="[Name]"
        android:textSize="@dimen/label_textsize"
        android:textColor="@color/textColorAccent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tasks_details_app_bar" />

    <View
        android:id="@+id/task_name_divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginBottom="@dimen/default_margin"
        android:background="@color/colorAccentDark"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_task_name_textview"/>

    <TextView
        android:id="@+id/task_current_status_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/current_status"
        android:textSize="@dimen/label_textsize"
        android:textColor="@color/textColorAccent"
        android:layout_margin="@dimen/default_margin"
        android:padding="@dimen/default_padding"
        app:layout_constraintTop_toBottomOf="@+id/task_name_divider"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <ImageView
        android:id="@+id/details_task_status_icon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginBottom="@dimen/default_margin"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginRight="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        tools:src="@drawable/ic_task_completed"
        app:layout_constraintLeft_toLeftOf="@+id/task_current_status_textview"
        app:layout_constraintTop_toBottomOf="@+id/task_current_status_textview"
        android:contentDescription="@string/task_details_status_icon_cd"/>

    <TextView
        android:id="@+id/details_task_status_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:padding="@dimen/default_padding"
        tools:text="[Status]"
        android:textSize="@dimen/label_textsize"
        android:textColor="@color/textColorAccent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/details_task_status_icon"
        app:layout_constraintTop_toTopOf="@+id/details_task_status_icon"
        app:layout_constraintBottom_toBottomOf="@+id/details_task_status_icon"/>

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/update_task_status_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:padding="@dimen/default_padding"
        android:entries="@array/task_update_labels"
        android:textSize="@dimen/label_textsize"
        android:textColor="@color/textColorAccent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/details_task_status_icon"
        app:layout_constraintTop_toTopOf="@+id/details_task_status_icon"
        app:layout_constraintBottom_toBottomOf="@+id/details_task_status_icon"
        android:visibility="gone"/>

    <View
        android:id="@+id/current_status_divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/colorAccentDark"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/details_task_status_textview"
        app:layout_constraintBottom_toBottomOf="@+id/task_details_date_label_textview"/>

    <TextView
        android:id="@+id/task_details_date_label_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/default_margin"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"
        android:padding="@dimen/default_padding"
        android:text="@string/task_date"
        android:textSize="@dimen/label_textsize"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@+id/current_status_divider"
        app:layout_constraintLeft_toLeftOf="parent"/>


    <TextView
        android:id="@+id/task_details_date_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="[Date]"
        android:textColorHint="@color/colorAccentDark"
        android:textSize="@dimen/label_textsize"
        android:layout_margin="@dimen/default_margin"
        android:padding="@dimen/default_padding"
        app:layout_constraintLeft_toRightOf="@+id/task_details_date_label_textview"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/task_details_date_label_textview"
        app:layout_constraintBottom_toBottomOf="@+id/task_details_date_label_textview"/>


    <TextView
        android:id="@+id/task_details_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:padding="@dimen/default_padding"
        android:text="@string/task_label"
        android:textSize="@dimen/label_textsize"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@+id/task_details_date_textview"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/task_details_label_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="[Label]"
        android:textColorHint="@color/colorAccentDark"
        android:textSize="@dimen/label_textsize"
        android:layout_margin="@dimen/default_margin"
        android:padding="@dimen/default_padding"
        app:layout_constraintLeft_toRightOf="@+id/task_details_label"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/task_details_label"
        app:layout_constraintBottom_toBottomOf="@+id/task_details_label"/>

    <Button
        android:id="@+id/update_task_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/task_details_update_button_text"
        android:textSize="@dimen/label_textsize"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/delete_task_button"
        android:background="@color/colorAccent"
        android:textColor="@color/textColorAccent"
        android:visibility="gone"/>

    <Button
        android:id="@+id/delete_task_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/task_details_delete_button_text"
        android:textSize="@dimen/label_textsize"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/textColorPrimary"
        android:visibility="gone"/>


    <LinearLayout
        android:id="@+id/task_details_progress_bar_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/translucent_black"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/task_details_progress_bar"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>